# baremetal_synquacer

./: .gitignore  README.md  setup.sh
uefi_hello/: CMakeLists.txt  aarch64-uefi.cmake  build.sh  qemu-aarch64-uefi.sh  startup.nsh  uefi_main.c
uefi_libc_printf_test/: .directory  CMakeLists.backup.txt  build.sh  qemu-aarch64-uefi.sh
uefi_libc_printf_test/cmake_toolchains/: aarch64-gcc-uefi.cmake  aarch64-llvm-baremetal.cmake  aarch64-llvm-uefi.cmake
uefi_libc_printf_test/kernel/: CMakeLists.txt  config.h  early_init.c  ldscript.lds  memmap.h  start.S  syscalls.c
uefi_libc_printf_test/uefi_loader/: CMakeLists.txt  startup.nsh  uefi_loader.c
